--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <head>
+<head
+ <meta name="google-site-verification" content="8QKIRbzIea7w9IpBzRulY5ejJb1URuXkm_Cww96tI64" />
   <meta charset="UTF-8">
   <meta name="description" content="HiSheet – Professional Excel services for smart data handling, spreadsheet templates, and visual data solutions.">
   <meta name="keywords" content="Excel expert, spreadsheet services, data cleaning, Excel charts, budget templates, invoice templates, HiSheet, Muhammad Hashir">
