--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head
- <meta name="google-site-verification" content="Bs3lXlOzcY-8QojqsdhOo8cHuRfwX7MfOSs-qXmmx0g" />
+<head>
+  <meta name="google-site-verification" content="Bs3lXlOzcY-8QojqsdhOo8cHuRfwX7MfOSs-qXmmx0g" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HiSheet</title>
+</head>
   <meta charset="UTF-8">
   <meta name="description" content="HiSheet – Professional Excel services for smart data handling, spreadsheet templates, and visual data solutions.">
   <meta name="keywords" content="Excel expert, spreadsheet services, data cleaning, Excel charts, budget templates, invoice templates, HiSheet, Muhammad Hashir">
