--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- 🔗 Website Icons Setup -->
+
+<!-- Browser Favicon -->
+<link rel="icon" href="fevicol.png" type="image/png" sizes="32x32">
+
+<!-- Apple Devices -->
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+<!-- Android Devices / Google -->
+<link rel="icon" href="touch-icon.png" type="image/png" sizes="192x192">
+
+<!-- Social Media Preview (Facebook, WhatsApp) -->
+<meta property="og:image" content="https://hisheet.github.io/hisheet/touch-icon.png">
+<meta property="og:title" content="HiSheet – Excel Services">
+<meta property="og:description" content="Professional Excel services: templates, data cleanup, charts & more.">
+  
   <meta name="google-site-verification" content="Bs3lXlOzcY-8QojqsdhOo8cHuRfwX7MfOSs-qXmmx0g" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
