--- a/index.html
+++ b/index.html
@@ -137,7 +137,40 @@
     once: true
   });
 </script>
+<!-- 🔒 Sign In Popup -->
+<div id="signin-popup" class="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closePopup()">❌</span>
+    <h2>Sign In to HiSheet</h2>
+    <input type="email" id="userEmail" placeholder="Email address" required>
+    <input type="password" id="userPassword" placeholder="Password" required>
+    <button onclick="submitSignIn()">Sign In</button>
+    <hr>
+    <button onclick="openGooglePopup()">Sign in with Google</button>
+    <button onclick="openFacebookPopup()">Sign in with Facebook</button>
+  </div>
+</div>
 
+<!-- Google Sign-In Popup -->
+<div id="google-popup" class="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closeGooglePopup()">❌</span>
+    <h3>Google Sign-In</h3>
+    <p>This is a demo popup. (Real Google Sign-In coming soon!)</p>
+  </div>
+</div>
+
+<!-- Facebook Sign-In Popup -->
+<div id="facebook-popup" class="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closeFacebookPopup()">❌</span>
+    <h3>Facebook Sign-In</h3>
+    <p>This is a demo popup. (Real Facebook Sign-In coming soon!)</p>
+  </div>
+</div>
+
+
+  
 </body>
 </html>
 
