--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 🔗 Website Icons Setup -->
-
-<!-- Browser Favicon -->
-<link rel="icon" href="fevicol.png" type="image/png" sizes="32x32">
-
-<!-- Apple Devices -->
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-<!-- Android Devices / Google -->
-<link rel="icon" href="touch-icon.png" type="image/png" sizes="192x192">
-
-<!-- Social Media Preview (Facebook, WhatsApp) -->
-<meta property="og:image" content="https://hisheet.github.io/hisheet/touch-icon.png">
-<meta property="og:title" content="HiSheet – Excel Services">
-<meta property="og:description" content="Professional Excel services: templates, data cleanup, charts & more.">
-  
-  <meta name="google-site-verification" content="Bs3lXlOzcY-8QojqsdhOo8cHuRfwX7MfOSs-qXmmx0g" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HiSheet</title>
+  <meta name="description" content="HiSheet – Professional Excel services for smart data handling, spreadsheet templates, and visual data solutions.">
+  <meta name="keywords" content="Excel expert, spreadsheet services, data cleaning, Excel charts, budget templates, invoice templates, HiSheet, Muhammad Hashir">
+  <meta name="author" content="Muhammad Hashir">
+  <meta name="google-site-verification" content="Bs3lXlOzcY-8QojqsdhOo8cHuRfwX7MfOSs-qXmmx0g" />
+
+  <!-- Favicon & Icons -->
+  <link rel="icon" href="fevicol.png" type="image/png" sizes="32x32">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" href="touch-icon.png" type="image/png" sizes="192x192">
+
+  <!-- Social Preview -->
+  <meta property="og:image" content="https://hisheet.github.io/hisheet/touch-icon.png">
+  <meta property="og:title" content="HiSheet – Excel Services">
+  <meta property="og:description" content="Professional Excel services: templates, data cleanup, charts & more.">
+
+  <title>HiSheet – Excel Expert Services</title>
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- AOS CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
   <meta charset="UTF-8">
   <meta name="description" content="HiSheet – Professional Excel services for smart data handling, spreadsheet templates, and visual data solutions.">
@@ -178,7 +180,50 @@
   function closeFacebookPopup() {    document.getElementById("facebook-popup").style.display = "none";  }</script>
 
   
-  
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script><script>  AOS.init({ duration: 800, once: true });
+  window.onload = function () {    const isSignedIn = localStorage.getItem("hisheetSignedIn");    if (!isSignedIn) {      document.getElementById("signin-popup").style.display = "block";    }  };
+  function closePopup() {    document.getElementById("signin-popup").style.display = "none";  }
+  function submitSignIn() {    const email = document.getElementById("userEmail").value;    const password = document.getElementById("userPassword").value;    if (email && password) {      localStorage.setItem("hisheetSignedIn", "true");      alert("Signed in successfully (Demo Only)");      document.getElementById("signin-popup").style.display = "none";    } else {      alert("Please enter email and password.");    }  }
+  function openGooglePopup() {    document.getElementById("google-popup").style.display = "block";  }
+  function closeGooglePopup() {    document.getElementById("google-popup").style.display = "none";  }
+  function openFacebookPopup() {    document.getElementById("facebook-popup").style.display = "block";  }
+  function closeFacebookPopup() {    document.getElementById("facebook-popup").style.display = "none";  }</script>
+
+
+
+
+
+  <!-- 🔒 Sign In Popup -->
+<div id="signin-popup" class="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closePopup()">❌</span>
+    <h2>Sign In to HiSheet</h2>
+    <input type="email" id="userEmail" placeholder="Email address" required>
+    <input type="password" id="userPassword" placeholder="Password" required>
+    <button onclick="submitSignIn()">Sign In</button>
+    <hr>
+    <button onclick="openGooglePopup()">Sign in with Google</button>
+    <button onclick="openFacebookPopup()">Sign in with Facebook</button>
+  </div>
+</div>
+
+<!-- 🔵 Google Sign-In Popup -->
+<div id="google-popup" class="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closeGooglePopup()">❌</span>
+    <h3>Google Sign-In</h3>
+    <p>This is a demo popup. (Real Google Sign-In coming soon!)</p>
+  </div>
+</div>
+
+<!-- 🔵 Facebook Sign-In Popup -->
+<div id="facebook-popup" class="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closeFacebookPopup()">❌</span>
+    <h3>Facebook Sign-In</h3>
+    <p>This is a demo popup. (Real Facebook Sign-In coming soon!)</p>
+  </div>
+</div>
 </body>
 </html>
 
