--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
   <div class="service-box" data-aos="fade-up">
     <img src="images/basic s.jpg" alt="Spreadsheet Tasks">
     <div class="service-text">
-      <h3><a href="basic-service.html">Basic Spreadsheet Tasks</a></h3>
+      <h3><a href="basic-service.css">Basic Spreadsheet Tasks</a></h3>
       <p>Formatting, organizing, and structuring data<br>
       Clean and user-friendly layouts</p>
     </div>
