--- a/services.html
+++ b/services.html
@@ -29,7 +29,9 @@
   <div class="service-box" data-aos="fade-up">
     <img src="images/basic s.jpg" alt="Spreadsheet Tasks">
     <div class="service-text">
-      <h3><a href="basic-service.css">Basic Spreadsheet Tasks</a></h3>
+      <a href="basic-spreadsheet-service.css" style="text-decoration: none; color: inherit;">
+  <h3>Basic Spreadsheet Tasks</h3>
+</a>
       <p>Formatting, organizing, and structuring data<br>
       Clean and user-friendly layouts</p>
     </div>
