--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
   <div class="service-box" data-aos="fade-up">
     <img src="images/basic s.jpg" alt="Spreadsheet Tasks">
     <div class="service-text">
-      <a href="basic-service.html" style="text-decoration: none; color: inherit;">
+      <a href="basic-spreadsheet-tasks.html" style="text-decoration: none; color: inherit;">
   <h3>Basic Spreadsheet Tasks</h3>
 </a>
       <p>Formatting, organizing, and structuring data<br>
