--- a/services.html
+++ b/services.html
@@ -40,6 +40,8 @@
   <div class="service-box" data-aos="fade-up" data-aos-delay="100">
     <img src="images/formulas.jpg" alt="Formulas & Functions">
     <div class="service-text">
+        <a href="formulas-functions.html">Formulas & Functions (Basic & Intermediate)</a>
+
       <h3>Formulas & Functions</h3>
       <p>SUM, IF, VLOOKUP, COUNTIF, AVERAGE, etc.<br>
       Automating calculations and improving sheet flow</p>
