--- a/services.html
+++ b/services.html
@@ -40,9 +40,10 @@
   <div class="service-box" data-aos="fade-up" data-aos-delay="100">
     <img src="images/formulas.jpg" alt="Formulas & Functions">
     <div class="service-text">
-        <a href="formulas-functions.html">Formulas & Functions (Basic & Intermediate)</a>
+        <a href="formulas-functions.html" style="text-decoration: none; color: inherit;">
 
       <h3>Formulas & Functions</h3>
+            </a>
       <p>SUM, IF, VLOOKUP, COUNTIF, AVERAGE, etc.<br>
       Automating calculations and improving sheet flow</p>
     </div>
