--- a/formulas-functions.html
+++ b/formulas-functions.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulas and Functions – HiSheet</title>
-  <link rel="stylesheet" href="css/formulas.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Basic Spreadsheet Tasks – HiSheet</title>
+  <link rel="stylesheet" href="css/style.css" />
   <!-- AOS Animation CSS -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body style="background-color:#f6fff9; color:#003c2c; font-family:Arial,sans-serif; padding:20px;">
+
+  <div class="page-header">
+    <a href="index.html" class="home-link">🏠 Home</a>
+  </div>
+
 
   <h2 data-aos="fade-up" style="color:#007a58; border-left:4px solid #00a070; padding-left:10px;">🧮 Formulas and Functions</h2>
   <p data-aos="fade-up">(SUM, IF, VLOOKUP, COUNT, COUNTIF, AVERAGE, SUMIF, etc. – Automating calculations and improving sheet flow)</p>
