--- a/basic-spreadsheet-tasks.html
+++ b/basic-spreadsheet-tasks.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Basic Spreadsheet Tasks – HiSheet</title>
   <link rel="stylesheet" href="css/style.css" />
+
   <!-- AOS Animation CSS -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
@@ -14,36 +15,51 @@
     <a href="index.html" class="home-link">🏠 Home</a>
   </div>
 
-  <section class="about-container">
+  <section class="about-container" data-aos="fade-up">
     <h2>📋 Basic Spreadsheet Tasks</h2>
-    <p>(Formatting, organizing, and structuring data into a clean and user-friendly layout)</p>
-    <p>At HiSheet, we specialize in handling the foundational work that makes Excel spreadsheets efficient, readable, and ready for analysis or sharing. Our Basic Spreadsheet Tasks service focuses on transforming raw or cluttered data into professionally structured formats.</p>
+    <p data-aos="fade-up" data-aos-delay="100">(Formatting, organizing, and structuring data into a clean and user-friendly layout)</p>
+    <p data-aos="fade-up" data-aos-delay="200">
+      At HiSheet, we specialize in handling the foundational work that makes Excel spreadsheets efficient, readable, and ready for analysis or sharing.
+      Our Basic Spreadsheet Tasks service focuses on transforming raw or cluttered data into professionally structured formats.
+    </p>
 
-    <h3>🛠️ What We Do</h3>
+    <h3 data-aos="fade-up" data-aos-delay="300">🛠️ What We Do</h3>
     <ul>
-      <li><strong>Formatting:</strong> Apply consistent fonts, colors, alignment, number/date formatting, and cell styles.</li>
-      <li><strong>Organizing Data:</strong> Arrange data in tables, sort it logically, and categorize it clearly.</li>
-      <li><strong>Structuring Sheets:</strong> Create headers, freeze panes, use filters, and add summaries.</li>
+      <li data-aos="fade-left" data-aos-delay="400"><strong>Formatting:</strong> Apply consistent fonts, colors, alignment, number/date formatting, and cell styles.</li>
+      <li data-aos="fade-left" data-aos-delay="500"><strong>Organizing Data:</strong> Arrange data in tables, sort it logically, and categorize it clearly.</li>
+      <li data-aos="fade-left" data-aos-delay="600"><strong>Structuring Sheets:</strong> Create headers, freeze panes, use filters, and add summaries.</li>
     </ul>
 
-    <h3>🔍 Uses</h3>
+    <h3 data-aos="fade-up" data-aos-delay="700">🔍 Uses</h3>
     <ul>
-      <li><strong>For businesses:</strong> Inventory logs, sales data, or employee records.</li>
-      <li><strong>For students/educators:</strong> Mark sheets or research logs.</li>
-      <li><strong>For professionals:</strong> Client/project trackers, invoices, task lists.</li>
-      <li><strong>For anyone:</strong> Personal budgets, schedules, or clean data logs.</li>
+      <li data-aos="fade-right" data-aos-delay="800"><strong>For businesses:</strong> Inventory logs, sales data, or employee records.</li>
+      <li data-aos="fade-right" data-aos-delay="900"><strong>For students/educators:</strong> Mark sheets or research logs.</li>
+      <li data-aos="fade-right" data-aos-delay="1000"><strong>For professionals:</strong> Client/project trackers, invoices, task lists.</li>
+      <li data-aos="fade-right" data-aos-delay="1100"><strong>For anyone:</strong> Personal budgets, schedules, or clean data logs.</li>
     </ul>
 
-    <h3>✅ Benefits</h3>
+    <h3 data-aos="fade-up" data-aos-delay="1200">✅ Benefits</h3>
     <ul>
-      <li>Saves time and reduces errors.</li>
-      <li>Enhances presentation for sharing or printing.</li>
-      <li>Makes spreadsheets analysis-ready.</li>
+      <li data-aos="fade-left" data-aos-delay="1300">Saves time and reduces errors.</li>
+      <li data-aos="fade-left" data-aos-delay="1400">Enhances presentation for sharing or printing.</li>
+      <li data-aos="fade-left" data-aos-delay="1500">Makes spreadsheets analysis-ready.</li>
     </ul>
 
-    <h3>💡 Why It’s Important</h3>
-    <p>Often, users have good data—but poor structure. Clean, professional spreadsheets help communicate better, impress clients, and stay productive.</p>
+    <h3 data-aos="fade-up" data-aos-delay="1600">💡 Why It’s Important</h3>
+    <p data-aos="fade-up" data-aos-delay="1700">
+      Often, users have good data—but poor structure. Clean, professional spreadsheets help communicate better,
+      impress clients, and stay productive.
+    </p>
   </section>
+
+  <!-- AOS Script -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 800,
+      once: true
+    });
+  </script>
 
 </body>
 </html>
