--- a/formulas-functions.html
+++ b/formulas-functions.html
@@ -3,49 +3,106 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Basic Spreadsheet Tasks – HiSheet</title>
+  <title>Formulas and Functions – HiSheet</title>
   <link rel="stylesheet" href="css/style.css" />
+
   <!-- AOS Animation CSS -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f6fff9;
+      color: #003c2c;
+      padding: 20px;
+    }
+    .page-header {
+      display: flex;
+      justify-content: flex-start;
+      padding: 10px 20px;
+      background-color: #e3f9ed;
+      border-bottom: 2px solid #009f6b;
+      border-radius: 8px;
+    }
+    .home-link {
+      text-decoration: none;
+      color: #007a58;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .home-link:hover {
+      text-decoration: underline;
+      color: #004c3f;
+    }
+    .content-box {
+      max-width: 850px;
+      margin: 40px auto;
+      padding: 30px 20px;
+      background-color: #ffffff;
+      border-left: 6px solid #009f6b;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    }
+    h2 {
+      color: #007a58;
+      border-left: 4px solid #00a070;
+      padding-left: 10px;
+      margin-bottom: 20px;
+    }
+    h3 {
+      color: #007a58;
+      margin-top: 25px;
+    }
+    p {
+      line-height: 1.6;
+      font-size: 16px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
-<body style="background-color:#f6fff9; color:#003c2c; font-family:Arial,sans-serif; padding:20px;">
+<body>
 
   <div class="page-header">
     <a href="index.html" class="home-link">🏠 Home</a>
   </div>
 
+  <div class="content-box">
+    <h2 data-aos="fade-up">🧮 Formulas and Functions</h2>
+    <p data-aos="fade-up">(SUM, IF, VLOOKUP, COUNT, COUNTIF, AVERAGE, SUMIF, etc. – Automating calculations and improving sheet flow)</p>
 
-  <h2 data-aos="fade-up" style="color:#007a58; border-left:4px solid #00a070; padding-left:10px;">🧮 Formulas and Functions</h2>
-  <p data-aos="fade-up">(SUM, IF, VLOOKUP, COUNT, COUNTIF, AVERAGE, SUMIF, etc. – Automating calculations and improving sheet flow)</p>
+    <p data-aos="fade-up">Formulas and functions are the power tools of Microsoft Excel. At HiSheet, we provide expert-level assistance in applying and customizing Excel formulas to automate your calculations, minimize manual effort, and ensure accuracy and efficiency in your spreadsheets. Whether you’re managing finances, tracking performance, or analyzing data, the right formulas can make your sheet do the work for you.</p>
 
-  <p data-aos="fade-up">Formulas and functions are the power tools of Microsoft Excel. At HiSheet, we provide expert-level assistance in applying and customizing Excel formulas to automate your calculations, minimize manual effort, and ensure accuracy and efficiency in your spreadsheets. Whether you’re managing finances, tracking performance, or analyzing data, the right formulas can make your sheet do the work for you.</p>
+    <h3 data-aos="fade-up">🛠️ What We Do</h3>
+    <ul data-aos="fade-up">
+      <li>Apply commonly used functions like <strong>SUM, IF, VLOOKUP, COUNT, COUNTIF, AVERAGE, SUMIF</strong>, etc.</li>
+      <li>Customize logical conditions to reflect real-world scenarios (e.g., IF sales > target, show "Achieved").</li>
+      <li>Automate calculations across large datasets to reduce repetitive work.</li>
+      <li>Create dynamic formulas that auto-update when your data changes.</li>
+    </ul>
 
-  <h3 data-aos="fade-up" style="color:#007a58;">🛠️ What We Do</h3>
-  <ul data-aos="fade-up">
-    <li>Apply commonly used functions like <strong>SUM, IF, VLOOKUP, COUNT, COUNTIF, AVERAGE, SUMIF</strong>, etc.</li>
-    <li>Customize logical conditions to reflect real-world scenarios (e.g., IF sales > target, show "Achieved").</li>
-    <li>Automate calculations across large datasets to reduce repetitive work.</li>
-    <li>Create dynamic formulas that auto-update when your data changes.</li>
-  </ul>
+    <h3 data-aos="fade-up">🔍 Uses</h3>
+    <ul data-aos="fade-up">
+      <li><strong>For businesses:</strong> Auto-calculating total sales, profit margins, or employee bonuses.</li>
+      <li><strong>For students:</strong> Automating grade calculations, data summaries, or academic scores.</li>
+      <li><strong>For professionals:</strong> Building smart reports that update themselves.</li>
+      <li><strong>For personal use:</strong> Budgeting sheets that calculate savings, expenses, or goals in real-time.</li>
+    </ul>
 
-  <h3 data-aos="fade-up" style="color:#007a58;">🔍 Uses</h3>
-  <ul data-aos="fade-up">
-    <li><strong>For businesses:</strong> Auto-calculating total sales, profit margins, or employee bonuses.</li>
-    <li><strong>For students:</strong> Automating grade calculations, data summaries, or academic scores.</li>
-    <li><strong>For professionals:</strong> Building smart reports that update themselves.</li>
-    <li><strong>For personal use:</strong> Budgeting sheets that calculate savings, expenses, or goals in real-time.</li>
-  </ul>
+    <h3 data-aos="fade-up">✅ Benefits</h3>
+    <ul data-aos="fade-up">
+      <li>Saves time by eliminating repetitive manual calculations.</li>
+      <li>Reduces human error, ensuring accurate data-based decisions.</li>
+      <li>Improves workflow, allowing faster data interpretation and reporting.</li>
+      <li>Makes your sheets more dynamic, interactive, and responsive.</li>
+    </ul>
 
-  <h3 data-aos="fade-up" style="color:#007a58;">✅ Benefits</h3>
-  <ul data-aos="fade-up">
-    <li>Saves time by eliminating repetitive manual calculations.</li>
-    <li>Reduces human error, ensuring accurate data-based decisions.</li>
-    <li>Improves workflow, allowing faster data interpretation and reporting.</li>
-    <li>Makes your sheets more dynamic, interactive, and responsive.</li>
-  </ul>
-
-  <h3 data-aos="fade-up" style="color:#007a58;">💡 Why It’s Important</h3>
-  <p data-aos="fade-up">Without formulas, Excel is just a table. With them, it becomes a powerful tool that can analyze, automate, and solve real problems. Our service ensures that your data isn’t just stored—but works for you. From simple totals to complex lookups, formulas bring intelligence into your spreadsheets, helping you make faster and smarter decisions with ease.</p>
+    <h3 data-aos="fade-up">💡 Why It’s Important</h3>
+    <p data-aos="fade-up">Without formulas, Excel is just a table. With them, it becomes a powerful tool that can analyze, automate, and solve real problems. Our service ensures that your data isn’t just stored—but works for you. From simple totals to complex lookups, formulas bring intelligence into your spreadsheets, helping you make faster and smarter decisions with ease.</p>
+  </div>
 
   <!-- AOS Animation JS -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
