--- a/services.html
+++ b/services.html
@@ -52,7 +52,9 @@
   <div class="service-box" data-aos="fade-up" data-aos-delay="200">
     <img src="images/data clean.png" alt="Data Cleaning">
     <div class="service-text">
+        <a href="data-cleaning.html" style="text-decoration: none; color: inherit;">
       <h3>Data Cleaning</h3>
+        </a>
       <p>Removing duplicates<br>Sorting & filtering<br>Organizing raw data</p>
     </div>
   </div>
@@ -60,7 +62,9 @@
   <div class="service-box" data-aos="fade-up" data-aos-delay="300">
     <img src="images/chart.png" alt="Chart Creation">
     <div class="service-text">
-      <h3>Chart Creation</h3>
+        <a href="chart-creation.html" style="text-decoration: none; color: inherit;">
+      <h3>Chart Creation</h3>\
+        </a>
       <p>Bar, Pie, Line, and Combo charts<br>Visual reports for better decision-making</p>
     </div>
   </div>
