--- a/services.html
+++ b/services.html
@@ -72,7 +72,9 @@
   <div class="service-box" data-aos="fade-up" data-aos-delay="400">
     <img src="images/budget.png" alt="Custom Templates">
     <div class="service-text">
+            <a href="custom-templet.html" style="text-decoration: none; color: inherit;">
       <h3>Custom Templates</h3>
+            </a>
       <p>Budget planners, Attendance sheets, Invoices, Timesheets,<br>
          Inventory trackers, Sales reports, Academic mark sheets</p>
     </div>
@@ -81,7 +83,9 @@
   <div class="service-box" data-aos="fade-up" data-aos-delay="500">
     <img src="images/file.png" alt="File Conversion & Merging">
     <div class="service-text">
+            <a href="file-conversion.html" style="text-decoration: none; color: inherit;">
       <h3>File Conversion & Merging</h3>
+            </a>
       <p>Excel ↔ PDF, CSV ↔ Excel<br>Combine multiple Excel files into one</p>
     </div>
   </div>
