--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <ul>
     <li data-aos="fade-up" data-aos-delay="100">
       <strong>Facebook:</strong>
-      <a href="https://www.facebook.com/share/172mHjhyA9/" target="_blank">Visit Facebook Profile</a>
+      <a href="https://www.facebook.com/share/16tNZTD9gk//" target="_blank">Visit Facebook Profile</a>
     </li>
     <li data-aos="fade-up" data-aos-delay="200">
       <strong>Email:</strong>
